Initial commit from Google Colab

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,10 @@
-GITHUB_PAT=YOUR_GITHUB_PERSONAL_ACCESS_TOKEN
+# Reddit API Credentials
+client_id=config.get('REDDIT_CLIENT_ID'),
+client_secret=config.get('REDDIT_CLIENT_SECRET'),
+username=config.get('REDDIT_USERNAME'),
+password=config.get('REDDIT_PASSWORD'),
+user_agent=config.get('REDDIT_USER_AGENT')
+
+# GitHub Credentials
 GITHUB_USERNAME=YOUR_GITHUB_USERNAME
+GITHUB_PAT=YOUR_PERSONAL_ACCESS_TOKEN
